--- a/views/layout.haml
+++ b/views/layout.haml
@@ -3,7 +3,7 @@
     = css :application
     = js :application
     %title
-      Конверты на выписку для новорожденных оптом по РФ
+      Продажа мыла ручной работы
   %body
     = yield
     = erb :metrika
