--- a/views/index.haml
+++ b/views/index.haml
@@ -110,7 +110,7 @@
         .block-content
           Товар устроит вас или мы вернем вам деньги.
 
-    .button
+    .button.get-price
       Получить каталог
 
 
@@ -128,9 +128,9 @@
 
 .modal-dialog
   .header
-    Оставьте свои контактные данные, чтобы получить прайс со скидкой
+    Оставьте свои контактные данные, чтобы получить каталог со скидкой
   .body
     %input{type: :text, name: :username, placeholder: 'Введите ваше имя'}
     %input{type: :text, name: :phone, placeholder: 'Введите ваш телефон'}
     %button.order-button
-      Получить прайс
+      Получить каталог
