--- a/views/index.haml
+++ b/views/index.haml
@@ -22,7 +22,7 @@
       .form-container
         .top-form
           %input#name-input{type: :text, name: 'username', placeholder: 'Введите ваше имя'}
-          %input{type: :text, name: 'phone', placeholder: 'Введите ваш номер телефона'}
+          %input{type: :text, name: 'phone', placeholder: 'Введите ваш email'}
           .button.order-button
             Получить скидку
 
@@ -131,6 +131,6 @@
     Оставьте свои контактные данные, чтобы получить каталог со скидкой
   .body
     %input{type: :text, name: :username, placeholder: 'Введите ваше имя'}
-    %input{type: :text, name: :phone, placeholder: 'Введите ваш телефон'}
+    %input{type: :text, name: :phone, placeholder: 'Введите ваш email'}
     %button.order-button
       Получить каталог
